# C-Student-Management-System-

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  COMPLETE_RESET_GUIDE.md  DIAGNOSE_ERROR.md  DIAGNOSTIC_GUIDE.md  FIX_CONNECTION_ERROR.md  PROFESSOR_CODE_CHANGES.md  QUICK_START.md  README.md  README_FIX.md  SOLUTION.md  UniManage.slnx  add_experience_grade.sql  build.bat  configure_db.bat  database_diagnostic.sql  fix_orphaned_students.sql  maskfile.md  reset_database.sql  vs_clean_build.bat
UniManage/: CMakeLists.txt  UniManage.vcxproj  UniManage.vcxproj.backup  UniManage.vcxproj.filters  scenario_answers.md
UniManage/controllers/: academic_level_controller.cpp  academic_level_controller.h  calendarcontroller.cpp  calendarcontroller.h  collegecontroller.cpp  collegecontroller.h  coursecontroller.cpp  coursecontroller.h  departmentcontroller.cpp  departmentcontroller.h  enrollmentcontroller.cpp  enrollmentcontroller.h  newscontroller.cpp  newscontroller.h  paymentcontroller.cpp  paymentcontroller.h  professorcontroller.cpp  professorcontroller.h  roomcontroller.cpp  roomcontroller.h  schedulecontroller.cpp  schedulecontroller.h  sectioncontroller.cpp  sectioncontroller.h  semestercontroller.cpp  semestercontroller.h  studentcontroller.cpp  studentcontroller.h  usercontroller.cpp  usercontroller.h
UniManage/database/: dbconnection.cpp  dbconnection.h  persistence.h  queries.cpp  queries.h
UniManage/docs/: BUILD_ERRORS_FIXED.md  CHANGELOG_YEAR_FORMAT.md  COMPLETE_UPDATE_SUMMARY.md  FIX_ACADEMIC_LEVEL_EDIT.md  student_visibility_flow.md  technologies.md  verification_scenario.md
UniManage/gui/: CMakeLists.txt  adminpanel.cpp  adminpanel.h  loginwindow.cpp  loginwindow.h  main.cpp  professorpanel.cpp  professorpanel.h  studentPortal.cpp  studentPortal.h  stylehelper.h
UniManage/gui/CLI University Prjkect/: CLI_Project.pro  README.md  main.cpp
UniManage/models/: academic_level.cpp  academic_level.h  attendance_log.cpp  attendance_log.h  calendar_event.cpp  calendar_event.h  college.cpp  college.h  course.cpp  course.h  department.cpp  department.h  enrollment.cpp  enrollment.h  news.cpp  news.h  payment.cpp  payment.h  professor.cpp  professor.h  room.cpp  room.h  schedule.cpp  schedule.h  section.cpp  section.h  semester.cpp  semester.h  student_data.cpp  student_data.h  user.cpp  user.h
UniManageCli/: CMakeLists.txt  CMakeUserPresets.json  README.md  cli.cpp  cli.h  clicontroller.cpp  clicontroller.h  main.cpp
UniManageCli/FileDB/: courses.csv  professors.csv  students_data.csv  users.csv
UniManageCli/dao/: course_dao.h  professor_dao.h  student_dao.h  user_dao.h
UniManageCli/persistence/: csv_course_dao.cpp  csv_course_dao.h  csv_professor_dao.cpp  csv_professor_dao.h  csv_student_dao.cpp  csv_student_dao.h  csv_user_dao.cpp  csv_user_dao.h
docs/: BUILD_ERRORS_FIXED.md  CHANGELOG_YEAR_FORMAT.md  COMPLETE_RESET_GUIDE.md  COMPLETE_UPDATE_SUMMARY.md  DIAGNOSE_ERROR.md  DIAGNOSTIC_GUIDE.md  FIX_ACADEMIC_LEVEL_EDIT.md  FIX_CONNECTION_ERROR.md  LINUX_RUN_GUIDE.md  PROFESSOR_CODE_CHANGES.md  README_FIX.md  SOLUTION.md  WINDOWS_BUILD_GUIDE.md  scenario_answers.md  student_visibility_flow.md  technologies.md  verification_scenario.md
scripts/: FORCE_FIX.bat  reset_db.bat  run_debug.bat
